# Renderer_001

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  LICENSE_APACHE.txt  LICENSE_MIT.md  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/core/: primitive.rs
src/core/tests/: primitive.rs
src/geometry/: bounds.rs  mod.rs  ray.rs
src/geometry/tests/: bounds.rs  ray.rs
