[package]
name = "shulsaga"
version = "0.1.0"
authors = ["Mike Gao <contact@mikegao.net>","lemonhx <lemonhx@lemonhx.tech>"]
edition = "2018"

[lib]
name = "libshulsaga"
path = "src/lib.rs"

[[bin]]
name = "shulsaga_cli"
path = "src/main.rs"


[dependencies]
enum_dispatch = "0.3"
# no std needs libm and alloc
nalgebra = { version = "*", default-features = false }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.6", features = ["union","const_generics"] }
